--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: ruby
 script: "rake"
 rvm:
-  - 1.8.7
   - 1.9.3
   - 2.0.0
-  - 2.1.0
+  - 2.1.1
   - ruby-head
-  - rbx-19mode
+  - rbx
   - jruby-19mode
   - jruby-head
 matrix:
   allow_failures:
     - rvm: jruby-head
-    - rvm: rbx-19mode
     - rvm: ruby-head
 services:
   - mongodb
