--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ matrix:
     - rvm: jruby-head
     - rvm: ruby-head
     - rvm: rbx-2.2.9
-services:
-  - mongodb
+before_script:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.0.1.tgz -O /tmp/mongodb.tgz
+  - tar -xvf /tmp/mongodb.tgz
+  - mkdir /tmp/data
+  - ${PWD}/mongodb-linux-x86_64-3.0.1/bin/mongod --dbpath /tmp/data --bind_ip 127.0.0.1 &> /dev/null &
