--- a/spec/support/apps/rails_4.1_app/config/mongoid.yml
+++ b/spec/support/apps/rails_4.1_app/config/mongoid.yml
@@ -1,12 +1,12 @@
 development:
-  sessions:
+  clients:
     default:
       database: rails41_app_development
       hosts:
         - localhost:27017
 
 test:
-  sessions:
+  clients:
     default:
       database: rails41_app_test
       hosts:
