--- a/spec/support/apps/rails_4.2_app/config/mongoid.yml
+++ b/spec/support/apps/rails_4.2_app/config/mongoid.yml
@@ -1,13 +1,13 @@
 development:
   clients:
     default:
-      database: rails42_app_development
+      database: test_database
       hosts:
         - 127.0.0.1:27017
 
 test:
   clients:
     default:
-      database: rails42_app_test
+      database: test_database
       hosts:
         - 127.0.0.1:27017
