--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ gemfile:
   - "gemfiles/rails-4.1-mongoid.gemfile"
   - "gemfiles/rails-4.2-mongo.gemfile"
   - "gemfiles/rails-4.2-mongoid.gemfile"
+matrix:
+  fast_finish: true
+  include:
+    - rvm: "2.3.0"
+      gemfile: "gemfiles/rails-4.2-mongo.gemfile"
+      script: "bundle exec rubocop"
 
 before_script:
   - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.0.1.tgz -O /tmp/mongodb.tgz
