--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
     - rvm: "2.3.0"
       gemfile: "gemfiles/rails-4.2-mongo.gemfile"
       script: "bundle exec rubocop"
+    - rvm: "2.3.1"
+      gemfile: "gemfiles/rails-4.2-mongo.gemfile"
+      script: "bundle exec danger"
 
 before_script:
   - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.0.1.tgz -O /tmp/mongodb.tgz
