--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ gemfile:
   - gemfiles/rails-4.1-mongoid.gemfile
   - gemfiles/rails-4.2-mongo.gemfile
   - gemfiles/rails-4.2-mongoid.gemfile
+  - gemfiles/rails-5.0-mongo.gemfile
+  - gemfiles/rails-5.0-mongoid.gemfile
 
 matrix:
   fast_finish: true
@@ -33,6 +35,10 @@ matrix:
       gemfile: gemfiles/rails-4.1-mongo.gemfile
     - rvm: 2.4.1
       gemfile: gemfiles/rails-4.1-mongoid.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-5.0-mongo.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-5.0-mongoid.gemfile
 
 services: mongodb
 
