Add tests for Rails 5.1 apps

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ gemfile:
   - gemfiles/rails-4.2-mongoid.gemfile
   - gemfiles/rails-5.0-mongo.gemfile
   - gemfiles/rails-5.0-mongoid.gemfile
+  - gemfiles/rails-5.1-mongo.gemfile
+  - gemfiles/rails-5.1-mongoid.gemfile
 
 matrix:
   fast_finish: true
@@ -39,6 +41,10 @@ matrix:
       gemfile: gemfiles/rails-5.0-mongo.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails-5.0-mongoid.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-5.1-mongo.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-5.1-mongoid.gemfile
 
 services: mongodb
 
