--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ gemfile:
   - gemfiles/rails-5.1-mongoid.gemfile
   - gemfiles/rails-5.2-mongo.gemfile
   - gemfiles/rails-5.2-mongoid.gemfile
+  - gemfiles/rails-6.0-mongo.gemfile
+  - gemfiles/rails-6.0-mongoid.gemfile
 
 matrix:
   fast_finish: true
@@ -49,6 +51,14 @@ matrix:
       gemfile: gemfiles/rails-5.2-mongo.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails-5.2-mongoid.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-6.0-mongo.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails-6.0-mongoid.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/rails-6.0-mongo.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/rails-6.0-mongoid.gemfile
     - rvm: 2.4.5
       gemfile: gemfiles/rails-4.0-mongo.gemfile
     - rvm: 2.4.5
@@ -57,6 +67,10 @@ matrix:
       gemfile: gemfiles/rails-4.1-mongo.gemfile
     - rvm: 2.4.5
       gemfile: gemfiles/rails-4.1-mongoid.gemfile
+    - rvm: 2.4.5
+      gemfile: gemfiles/rails-6.0-mongo.gemfile
+    - rvm: 2.4.5
+      gemfile: gemfiles/rails-6.0-mongoid.gemfile
     - rvm: 2.5.5
       gemfile: gemfiles/rails-4.0-mongo.gemfile
     - rvm: 2.5.5
